<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:paddingStart="25dp"
    android:paddingEnd="25dp">

    <!-- Navigation buttons start -->

    <TextView
        android:id="@+id/textSudoxTag"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/buttonNavbarBack"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:drawableStart="@drawable/ic_arrow_left"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/toolbar_back"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/buttonNavbarNext"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/toolbar_next"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/buttonSomeFeature"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/retry_send"
        android:textSize="15sp" />

    <!-- Navigation buttons end -->

</RelativeLayout>