<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?attr/colorPrimary"
                android:gravity="center_vertical"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

    <!-- Navigation buttons start -->


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sudox_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textSize="14sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_navbar_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_arrow_left"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/toolbar_back"
        android:textSize="14sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_navbar_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/toolbar_next"
        android:textSize="14sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_navbar_send_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/retry_send"
        android:textSize="14sp"/>

    <!-- Navigation buttons end -->

</RelativeLayout>