<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.sudox.design.navigation.toolbar.SudoxToolbar
        android:id="@+id/contactAddToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:featureButtonText="@string/add"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/new_contact" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingTop="25dp"
        android:paddingEnd="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.sudox.design.avatar.TextAvatarView
                android:id="@+id/contactAvatar"
                android:layout_width="70dp"
                android:layout_height="70dp" />

            <com.sudox.design.edittext.SudoxTextInputLayout
                android:id="@+id/contactNameEditTextContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp">

                <EditText
                    android:id="@+id/contactNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name_not_necessary"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:maxLength="@integer/length_name"
                    android:maxLines="1"
                    android:textColorHint="#9f9f9f"
                    android:textSize="15sp" />

            </com.sudox.design.edittext.SudoxTextInputLayout>
        </LinearLayout>

        <com.sudox.design.edittext.SudoxTextInputLayout
            android:id="@+id/contactPhoneEditTextContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/contactPhoneEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:textColorHint="#9f9f9f"
                android:textSize="15sp" />

        </com.sudox.design.edittext.SudoxTextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/hint_phone_wil_not_be_found"
            android:textColor="@color/colorHint" />

    </LinearLayout>
</LinearLayout>