<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/sign_in"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:text="@string/enter_your_phone"
        android:textSize="16sp" />

    <com.sudox.design.widgets.SudoxTextInputLayout
        android:id="@+id/phoneEditTextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:textColorHint="#9f9f9f"
            android:textSize="15sp" />

    </com.sudox.design.widgets.SudoxTextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_weight="0.80"
            android:gravity="center"
            android:text="@string/hint_of_create_account"
            android:textColor="@color/colorHint"
            android:textColorHint="#9f9f9f"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
    <!--TODO: phoneNumber color-->