<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/what_is_your_name"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/enter_your_name_and_nickname"
        android:textSize="16sp" />

    <com.sudox.design.edittext.SudoxTextInputLayout
        android:id="@+id/nameEditTextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/length_name">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:inputType="textPersonName|textNoSuggestions"
            android:maxLength="@integer/length_name"
            android:maxLines="1"
            android:textColorHint="#9f9f9f"
            android:textSize="15sp" />

    </com.sudox.design.edittext.SudoxTextInputLayout>

    <com.sudox.design.edittext.SudoxTextInputLayout
        android:id="@+id/nicknameEditTextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/length_nickname">

        <EditText
            android:id="@+id/nicknameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nickname"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:maxLength="@integer/length_nickname"
            android:maxLines="1"
            android:textColorHint="#9f9f9f"
            android:textSize="15sp" />

    </com.sudox.design.edittext.SudoxTextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_weight="0.80"
            android:gravity="center"
            android:text="@string/about_name"
            android:textColor="@color/colorHint"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
    <!--TODO: name color-->