<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Delete this implementation-->
            <!--Add custom Toolbar-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sudox"
                    android:textSize="20sp"/>
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Далее >"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"/>
            </RelativeLayout>
        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_text"
        android:layout_below="@id/appBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/sign_in"
        android:fontFamily="sans-serif-light"
        android:textSize="25sp"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enter_your_email_text"
        android:layout_below="@id/sign_in_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/enter_your_email"
        android:fontFamily="sans-serif-light"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_edit_text_container"
        android:layout_below="@id/enter_your_email_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/email_edit_text"
            android:hint="@string/email"
            android:textSize="13sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_edit_text_container"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:textColor="@color/colorHint"
        android:text="@string/hint_of_create_account"/>

</RelativeLayout>